# YoloView

./: .gitignore  Market Research.md  README.md  README_ko.md  library_update.bat  main.py  pyiqa_update.bat  pyproject.toml  requirements.txt  supervision_update.bat  train.py  ultralytics_update.bat
config/: file.json  folder.json  model.json  result.json  setting.json
docs/: image extract.md  label tool.md
docs/Auto Curate/: Auto_Curate.md
docs/Curate/: Auto_Curate_2.md
examples/: OCR.py
models/: common.py  experimental.py  tasks.py  yolo.py
paddle/base/: libpaddle.lib
paddle/tensor/: tensor.pyi
pyiqa/: __init__.py
train/: bbox_to_seg.py  dataset_vaild.py  seg_to_bbox.py  train.py
ui/: YOLOSHOWUI.py  YOLOSHOWUI.qrc  YOLOSHOWUI.ui  YOLOSHOWUIVS.py  YOLOSHOWUIVS.ui  YOLOSHOWUI_rc.py
ui/utils/: AcrylicFlyout.py  CurationWidget.py  CustomComboBox.py  CustomMessageBox.py  MouseLabel.py  MultiSelectComboBox.py  TableView.py  customGrips.py  drawFigure.py  rtspDialog.py
utils/: DatasetImageQualityEvaluator.py  DatasetSorting.py  glo.py  image_save.py  logger.py
utils/brisque/: __init__.py  brisque.py
utils/curation/: DatasetChangeClassId.py  DatasetCleaner.py  DatasetConverter.py  DatasetHashClac.py  (+4 more)
yolocode/: BBoxValidThread.py  FastSAMThread.py  OCRThread.py  RTDETRThread.py  SAMThread.py  SAMv2Thread.py  SegValidThread.py  YOLONasThread.py  YOLOv8ClsThread.py  YOLOv8ObbThread.py  YOLOv8PoseThread.py  YOLOv8SegThread.py  YOLOv8Thread.py
yoloshow/: ChangeWindow.py  Window.py  YOLOSHOW.py  YOLOSHOWBASE.py  YOLOSHOWVS.py  YOLOThreadPool.py
(+15 files in other folders)
